==> lyusupov/SoftRF/software/firmware/source/SoftRF/Platform_nRF52.cpp <==
#include <SPI.h>
#include <Wire.h>
#include <pcf8563.h>
#include <SoftSPI.h>
#include <SerialFlash.h>
#include <Adafruit_SleepyDog.h>
#include "nrf_wdt.h"
#include "SoCHelper.h"
#include "RFHelper.h"
#include "EEPROMHelper.h"
#include "GNSSHelper.h"
#include "BaroHelper.h"
#include "LEDHelper.h"
#include "BluetoothHelper.h"
#include "EPDHelper.h"
#define pREG32 (REG32 *)
#define DEVICE_ID_HIGH    (*(pREG32 (0x10000060)))
#define DEVICE_ID_LOW     (*(pREG32 (0x10000064)))

static void nRF52_setup()
{
  ui = &ui_settings;

//  uint32_t u32Reset_reason = NRF_POWER->RESETREAS;
//  reset_info.reason = u32Reset_reason;

  /* supposed to be control of power supply */
  pinMode(SOC_GPIO_PIN_PWR,  OUTPUT);
  digitalWrite(SOC_GPIO_PIN_PWR, HIGH);

  pinMode(SOC_GPIO_LED_GREEN, OUTPUT);
  pinMode(SOC_GPIO_LED_RED,   OUTPUT);
  pinMode(SOC_GPIO_LED_BLUE,  OUTPUT);

  ledOn(SOC_GPIO_LED_GREEN);
  ledOff(SOC_GPIO_LED_RED);
  ledOff(SOC_GPIO_LED_BLUE);

  nRF52_has_spiflash = SerialFlash.begin(SPI2, SOC_GPIO_PIN_SFL_SS);

  if (nRF52_has_spiflash) {
    unsigned char buf[8];

    SerialFlash.readID(buf);

    uint32_t flash_id = (buf[0] << 16) | (buf[1] << 8) | buf[2];

    SerialFlash.sleep();
  }

  Wire.setPins(SOC_GPIO_PIN_SDA, SOC_GPIO_PIN_SCL);

  Wire.begin();
  Wire.beginTransmission(PCF8563_SLAVE_ADDRESS);
  nRF52_has_rtc = (Wire.endTransmission() == 0);
  Wire.end();

  i2c = new I2CBus(Wire);

  if (nRF52_has_rtc && (i2c != nullptr)) {
    rtc = new PCF8563_Class(*i2c);
  }
}

static void nRF52_loop()
{
  // Reload the watchdog
  if (nrf_wdt_started(NRF_WDT)) {
    Watchdog.reset();
  }
}

static void nRF52_fini()
{
  ledOff(SOC_GPIO_LED_GREEN);
  ledOff(SOC_GPIO_LED_RED);
  ledOff(SOC_GPIO_LED_BLUE);

  pinMode(SOC_GPIO_LED_GREEN, INPUT);
  pinMode(SOC_GPIO_LED_RED,   INPUT);
  pinMode(SOC_GPIO_LED_BLUE,  INPUT);
}

static void nRF52_reset()
{
  NVIC_SystemReset();
}

static uint32_t nRF52_getChipId()
{
#if !defined(SOFTRF_ADDRESS)
  uint32_t id = DEVICE_ID_LOW;

  /* remap address to avoid overlapping with congested FLARM range */
  if (((id & 0x00FFFFFF) >= 0xDD0000) && ((id & 0x00FFFFFF) <= 0xDFFFFF)) {
    id += 0x100000;
  }

  return id;
#else
  return (SOFTRF_ADDRESS & 0xFFFFFFFFU );
#endif
}

static uint32_t nRF52_getFreeHeap()
{
  return dbgHeapTotal() - dbgHeapUsed();
}

static void nRF52_swSer_begin(unsigned long baud)
{
  swSer.begin(baud);

  /* 'Cold' restart */
//  swSer.write("$PGKC030,3,1*2E\r\n");
//  swSer.flush(); delay(250);

  /* give GOKE GNSS few ms to warm up */
  delay(500);

  /* Firmware version request */
  swSer.write("$PGKC462*2F\r\n");
  swSer.flush(); delay(250);

  /* GPS + GLONASS */
  swSer.write("$PGKC115,1,1,0,0*2A\r\n");
  swSer.flush(); delay(250);

  /* RMC + GGA + GSA */
  swSer.write("$PGKC242,0,1,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0*36\r\n");
  swSer.flush(); delay(250);

#if SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN
  /* Enable 3D fix 1PPS output */
//  swSer.write("$PGKC161,2,100,1000*07\r\n");
//  swSer.flush(); delay(250);
#endif
}

static byte nRF52_Display_setup()
{
  byte rval = DISPLAY_NONE;

#if defined(USE_EPAPER)
  if (EPD_setup(true)) {
    rval = DISPLAY_EPD_1_54;
  }

  /* EPD back light off */
  pinMode(SOC_GPIO_PIN_EPD_BLGT, OUTPUT);
  digitalWrite(SOC_GPIO_PIN_EPD_BLGT, LOW);
#endif /* USE_EPAPER */

  return rval;
}

static void nRF52_Display_loop()
{
#if defined(USE_EPAPER)
  EPD_loop();
#endif /* USE_EPAPER */
}

static void nRF52_Display_fini(const char *msg)
{
#if defined(USE_EPAPER)
  /* EPD back light */
  pinMode(SOC_GPIO_PIN_EPD_BLGT, INPUT);

  EPD_fini(msg);
#endif /* USE_EPAPER */
}

static float nRF52_Battery_voltage()
{
  float raw;

  // Set the analog reference to 3.0V (default = 3.6V)
  analogReference(AR_INTERNAL_3_0);

  // Set the resolution to 12-bit (0..4095)
  analogReadResolution(12); // Can be 8, 10, 12 or 14

  // Let the ADC settle
  delay(1);

  // Get the raw 12-bit, 0..3000mV ADC value
  raw = analogRead(SOC_GPIO_PIN_BATTERY);

  // Set the ADC back to the default settings
  analogReference(AR_DEFAULT);
  analogReadResolution(10);

  // Convert the raw value to compensated mv, taking the resistor-
  // divider into account (providing the actual LIPO voltage)
  // ADC range is 0..3000mV and resolution is 12-bit (0..4095)
  return raw * REAL_VBAT_MV_PER_LSB * 0.001;
}

static void nRF52_WDT_fini()
{
  // cannot disable nRF's WDT
  if (nrf_wdt_started(NRF_WDT)) {
    Watchdog.reset();
  }
}
